Fixed header spacing

--- a/styles/appointment.css
+++ b/styles/appointment.css
@@ -1,10 +1,3 @@
-h1 {
-	padding-right: 6rem;
-}
-#spacer {
-	width: 2rem;
-}
-
 .card-container {
 	padding-bottom: 3rem;
 	display: flex;
